# PhenoObservability

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BOUNDARY.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  PLAN.md  PRD.md  PR_SUMMARY.md  README.md  RELEASE.md  SECURITY.md  SPEC.md  SSOT.md  STATUS.md  SUPPORT.md  clippy.toml  deny.toml  justfile  llms.txt  openapi.yaml  release-registry.toml  sbom.cdx.json  sonar-project.properties  worklog.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml  scorecard.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/workflows/: audit.yml  cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  coverage.yml  deny.yml  doc-links.yml  docs-deploy.yml  fr-coverage.yml  governance-index.yml  journey-gate.yml  module-deps.yml  openapi-check.yml  publish.yml  quality-gate.yml  release-dry-run.yml  sbom-refresh.yml  scorecard.yml  sonarcloud.yml  test.yml  trufflehog.yml
ObservabilityKit/: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  FUNCTIONAL_REQUIREMENTS.md  README.md  SECURITY.md
ObservabilityKit/.github/: CODEOWNERS  dependabot.yml
ObservabilityKit/go/: go.work
ObservabilityKit/python/: pyproject.toml
ObservabilityKit/python/performance_kit/: __init__.py
ObservabilityKit/python/performance_kit/scripts/: __init__.py
ObservabilityKit/rust/: Cargo.toml
ObservabilityKit/rust/phenotype-health-runtime/: Cargo.toml
ObservabilityKit/rust/phenotype-health-runtime/src/: background.rs  history.rs  http.rs  metrics.rs
ObservabilityKit/rust/phenotype-logging/: Cargo.toml
ObservabilityKit/rust/phenotype-logging/src/: lib.rs
ObservabilityKit/rust/phenotype-metrics/: Cargo.toml
ObservabilityKit/rust/phenotype-metrics/src/: lib.rs
ai-prompt-logger/: README.md  prompt_logger.py  pyproject.toml
ai-prompt-logger/src/ai_prompt_logger/: __init__.py  cli.py
alerting/: ADR.md  PLAN.md  PRD.md  SPEC.md
archive/Profila/: BOUNDARY.md  DEPRECATED.md  (+1 more)
crates/helix-logging/: ADR.md  ARCHIVED.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PRD.md  README.md
crates/helix-logging/src/: lib.rs
crates/metrickit/: Cargo.toml  README.md
crates/metrickit/src/: lib.rs
crates/metrickit/src/adapters/: mod.rs  prometheus.rs
crates/metrickit/src/application/: exporter.rs  mod.rs
crates/metrickit/src/domain/: counter.rs  errors.rs  gauge.rs  histogram.rs  metric.rs  mod.rs  registry.rs
crates/metrickit/tests/: lib_tests.rs  smoke_test.rs
crates/pheno-dragonfly/: Cargo.toml
crates/pheno-dragonfly/src/: lib.rs
crates/pheno-questdb/: Cargo.toml
crates/pheno-questdb/src/: lib.rs
crates/pheno-questdb/tests/: integration.rs
crates/pheno-tracing/: Cargo.toml
crates/pheno-tracing/src/: lib.rs
crates/phenotype-mcp-server/: Cargo.toml  EXTRACT_NOTE.md
crates/phenotype-mcp-server/src/: lib.rs
crates/phenotype-observably-logging/: Cargo.toml  README.md
crates/phenotype-observably-logging/src/: lib.rs
crates/phenotype-observably-macros/: Cargo.toml  README.md  USAGE.md
crates/phenotype-observably-macros/src/: lib.rs
crates/phenotype-observably-macros/tests/: consumer_instrumentation.rs  integration.rs
crates/phenotype-observably-ports/: Cargo.toml
crates/phenotype-observably-ports/src/: cache.rs  lib.rs  metrics.rs  metrics_prometheus.rs  test_doubles.rs  timeseries.rs
crates/phenotype-observably-ports/tests/: chaos_l11_2026_06_22.rs
crates/phenotype-observably-sentinel/: Cargo.toml  README.md
crates/phenotype-observably-sentinel/src/: alerting.rs  lib.rs
crates/phenotype-observably-tracing/: Cargo.toml
crates/phenotype-observably-tracing/src/: integration_tests.rs  lib.rs  metrics.rs  privacy_filter.rs  spans.rs
crates/phenotype-observably-tracing/tests/: phenotype_bus_observability_e2e.rs  phenotype_event_bus_observability_e2e.rs
crates/tracely-sentinel/: Cargo.toml  rustfmt.toml  worklog.md
crates/tracely-sentinel/benches/: perf.rs
crates/tracely-sentinel/src/: bulkhead.rs  circuit_breaker.rs  lib.rs  rate_limiter.rs  validation.rs
crates/tracingkit/: Cargo.toml
crates/tracingkit/src/: lib.rs
crates/tracingkit/src/adapters/: exporters.rs
crates/tracingkit/src/application/: tracer_provider.rs
crates/tracingkit/src/domain/: errors.rs  mod.rs  span.rs  trace.rs  tracer.rs
dashboards/: ADR.md
docs/: FUNCTIONAL_REQUIREMENTS.md  PHASE3_ERRORS_AUDIT.md  README.md  traceability.md
health/: ADR.md  CHARTER.md  PLAN.md  PRD.md  SPEC.md
logctx/: ADR.md  PLAN.md  PRD.md  SPEC.md
logging/: SOTA.md
metrics/: AGENTS.md  CHARTER.md  PLAN.md  PRD.md  SPEC.md
pheno-otel/: Cargo.toml
pheno-otel/src/exporters/: http.rs  stdout.rs
ports/: telemetry.ts
profiling/: README.md
python/: README.md
rust/: Cargo.toml
rust/phenotype-compliance-scanner/: Cargo.toml
rust/phenotype-compliance-scanner/src/: lib.rs
rust/phenotype-health/: Cargo.toml
rust/phenotype-health-axum/: Cargo.toml
rust/phenotype-health-axum/src/: lib.rs
rust/phenotype-health-cli/: Cargo.toml
rust/phenotype-health-cli/src/: lib.rs  main.rs
rust/phenotype-health-cli/tests/: integration_tests.rs
rust/phenotype-health-runtime/src/: composite.rs  lib.rs
rust/phenotype-health-runtime/tests/: integration_tests.rs
rust/phenotype-health/src/: lib.rs
rust/phenotype-logging/: Cargo.toml
rust/phenotype-logging/src/: lib.rs
rust/phenotype-metrics/: Cargo.toml
rust/phenotype-mock/: Cargo.toml
rust/phenotype-mock/src/: lib.rs
rust/phenotype-project-registry/: Cargo.toml
rust/phenotype-project-registry/src/: lib.rs
rust/phenotype-security-aggregator/: Cargo.toml
rust/phenotype-security-aggregator/src/: lib.rs
rust/phenotype-sentry-config/: Cargo.toml
rust/phenotype-sentry-config/src/: lib.rs
rust/phenotype-sentry-config/tests/: sentry_integration_test.rs
rust/phenotype-telemetry/: Cargo.toml
rust/phenotype-telemetry/src/: lib.rs
scripts/: audit.sh
src/: main.rs
tracing/: ADR.md  PLAN.md  PRD.md  SPEC.md
(+96 files in other folders)
