[workspace]
resolver = "2"
members = [
    "crates/pheno-dragonfly",
    "crates/pheno-questdb",
    "crates/phenotype-llm",
    "crates/phenotype-mcp-server",
    "crates/phenotype-surrealdb",
    "crates/tracely-core",
    "crates/tracely-sentinel",
    "crates/helix-logging",
    "crates/tracingkit",
    "crates/phenotype-observably-tracing",
    "crates/phenotype-observably-logging",
    "crates/phenotype-observably-sentinel",
    "crates/phenotype-observably-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Phenotype Team <team@phenotype.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoObservability"
homepage = "https://phenotype.dev"
description = "Observability infrastructure for Phenotype"

[workspace.dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing-log"] }
tracing-opentelemetry = "0.23"
thiserror = "2.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
parking_lot = "0.12"
