[project]
name = "ai-prompt-logger"
version = "0.1.0"
description = "AI Prompt Logger - Scrapes and stores prompts from various AI agent platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-asyncio>=0.23",
]
cli = ["ai-prompt-logger[dev]"]

[project.scripts]
ai-prompt-logger = "ai_prompt_logger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
