[package]
name = "pheno-otel"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "OpenTelemetry OTLP exporter substrate for the pheno-* fleet (ADR-037). Provides OtlpPort + Stdout/HttpExporter adapters; consumers depend on this for OTLP wire-format export of traces, metrics, and logs."
repository = "https://github.com/KooshaPari/pheno-otel"
documentation = "https://docs.rs/pheno-otel"
keywords = ["phenotype", "opentelemetry", "otlp", "otel", "observability", "substrate", "tracing"]
categories = ["development-tools", "api-bindings", "asynchronous"]
readme = "README.md"
publish = true

# Workspace moved to parent PhenoObservability/Cargo.toml.
# This crate is now a workspace member there.

[lib]
name = "pheno_otel"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Reserved for OTLP smoke test fixtures.
