[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "performance-kit"
version = "0.1.0"
description = "Performance monitoring and analysis toolkit for Python applications"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Phenotype Team", email = "team@phenotype.space" }]
keywords = ["performance", "benchmarking", "profiling", "monitoring", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
# Core benchmarking dependencies
core = [
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
    "py-spy>=0.3.14",
    "line-profiler>=4.1.1",
    "memory-profiler>=0.61.0",
]

# Load testing dependencies
load = [
    "locust>=2.17.0",
]

# Analysis dependencies
analysis = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "requests>=2.31.0",
]

# Metrics/monitoring dependencies
monitoring = [
    "prometheus-client>=0.17.0",
    "statsd>=4.0.1",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# All dependencies
all = [
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
    "py-spy>=0.3.14",
    "line-profiler>=4.1.1",
    "memory-profiler>=0.61.0",
    "locust>=2.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "prometheus-client>=0.17.0",
    "statsd>=4.0.1",
]

[project.urls]
Homepage = "https://github.com/KooshaPari/ObservabilityKit"
Repository = "https://github.com/KooshaPari/ObservabilityKit"
Issues = "https://github.com/KooshaPari/ObservabilityKit/issues"

[project.scripts]
perfkit-benchmark = "performance_kit.scripts.benchmark:main"
perfkit-profiler = "performance_kit.scripts.profiler:main"
perfkit-analyze-complexity = "performance_kit.scripts.analyze_complexity:main"
perfkit-analyze-deps = "performance_kit.scripts.analyze_dependencies:main"
perfkit-analyze-duplication = "performance_kit.scripts.analyze_duplication:main"
perfkit-analyze-response-times = "performance_kit.scripts.analyze_response_times:main"
perfkit-analyze-test-structure = "performance_kit.scripts.analyze_test_structure:main"
perfkit-coverage = "performance_kit.scripts.coverage_analysis:main"
perfkit-duration-tracker = "performance_kit.scripts.duration_tracker:main"

[tool.hatch.build.targets.wheel]
packages = ["performance_kit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
