[package]
name = "helix-logging"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Structured logging helpers with correlation IDs, JSON output, and async support"
repository = "https://github.com/phenotype-dev/helix-logging"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
