[package]
name = "pheno-dragonfly"
version = "0.1.0"
edition = "2024"
authors = ["Koosha Pari <koosha@phenotype.dev>"]
description = "Dragonfly client for PhenoObservability - Redis-compatible multi-threaded cache"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.10"
async-trait = "0.1"
phenotype-observably-macros = { path = "../phenotype-observably-macros" }

[dev-dependencies]
tokio-test = "0.4"
