[package]
name = "pheno-dragonfly"
version = "0.1.0"
edition = "2024"
authors = ["Koosha Pari <koosha@koosha.com>"]
description = "Dragonfly client for PhenoObservability - Redis-compatible multi-threaded cache"
license = "MIT OR Apache-2.0"

[dependencies]
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
phenotype-errors = { path = "../../../pheno/crates/phenotype-errors" }

[dev-dependencies]
tokio-test = "0.4"
