[package]
name = "pheno-questdb"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
urlencoding = "2.1"
phenotype-observably-macros = { path = "../phenotype-observably-macros" }
phenotype-errors = { path = "../../../pheno/crates/phenotype-errors" }
