[package]
name = "pheno-questdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "QuestDB client for PhenoObservability time-series data"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
urlencoding = "2.1"
phenotype-observably-macros = { path = "../phenotype-observably-macros" }
phenotype-errors = { workspace = true }
async-trait = { workspace = true }
phenotype-observably-ports = { workspace = true }

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "test-util"] }
wiremock = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
