[package]
name = "pheno-tracing"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Distributed tracing utilities with tracing_subscriber, TraceContext, and span management"
repository = "https://github.com/phenotype-dev/PhenoObservability"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
