[package]
name = "phenotype-mcp-server"
version = "0.1.0"
edition = "2024"
description = "Fork of jlowin/fastmcp with Rust core"
license = "MIT"
repository = "https://github.com/jlowin/fastmcp"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
jsonschema = "0.30"
tracing = { workspace = true }
phenotype-observably-macros = { path = "../phenotype-observably-macros" }
phenotype-errors = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
