[workspace]

[package]
name = "phenotype-mcp-server"
version = "0.2.0"
edition = "2024"
description = "Phenotype MCP server built on rmcp"
license = "MIT"
repository = "https://github.com/KooshaPari/PhenoObservability"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
phenotype-errors = { path = "../../vendor/phenotype-errors" }
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }

[dev-dependencies]
tokio-test = "0.4"
