[package]
name = "phenotype-observably-macros"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for PhenoObservability: `#[async_instrumented]` wraps an async fn in a real `tracing::Instrument`-wrapped future that opens a span across every `.await` point. Supports `name = \"...\"`, `level = \"...\"`, and `skip(...)` options. Sync fns are passed through unchanged."
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
# When enabled (default), `#[async_instrumented]` emits a real
# `tracing::Instrument`-wrapped future. When disabled the macro degenerates
# to identity so downstream crates keep building without pulling in
# `tracing` at runtime.
tracing = ["dep:tracing"]

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
