[package]
name = "phenotype-observably-sentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
parking_lot = { workspace = true }
governor = { version = "0.6", features = ["std", "jitter"] }
nonzero_ext = "0.3"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
