[package]
name = "phenotype-observably-sentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
# Canonical rate-limiter implementation lives in `phenotype-sentinel`
# (the `tracely-sentinel` crate). Re-exported here to keep a single
# source of truth — replaces the previous governor-based `Sentinel`
# rate limiter.
phenotype-sentinel = { path = "../tracely-sentinel" }

[dev-dependencies]
tokio = { workspace = true }
