[package]
name = "phenotype-observably-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
phenotype-bus = { path = "../../../phenotype-bus" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "fmt", "ansi", "time", "env-filter"] }
tracing-opentelemetry = "0.24"
opentelemetry = { version = "0.24", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.17", features = ["trace"] }
prometheus = { version = "0.14" }
regex = "1.10"
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
phenotype-bus = { path = "../../../phenotype-bus" }
