[package]
name = "phenotype-sentinel"
version = "0.1.0"
edition = "2021"
description = "Rate limiting, circuit breaker, bulkhead"
license = "MIT"
repository = "https://github.com/KooshaPari/sentinel"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
phenotype-errors = { workspace = true }

[features]
validation-extended = []

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.0", features = ["macros", "rt"] }

[[bench]]
name = "perf"
harness = false
