[package]
name = "tracingkit"
version = "0.1.0"
edition = "2021"
description = "Distributed tracing framework with OpenTelemetry support"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
phenotype-observably-macros = { path = "../phenotype-observably-macros" }
phenotype-errors = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["otlp"]
otlp = []
jaeger = []
zipkin = []
