[package]
name = "phenotype-compliance-scanner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Placeholder stub for phenotype compliance scanner (precursor to PhenoObs workspace dedupe)"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
