[package]
name = "phenotype-compliance-scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Compliance scanning for Phenotype projects"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true
walkdir = "2"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
