[package]
name = "phenotype-health-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP server and dashboard for phenotype-health"

[dependencies]
# Core phenotype libraries
phenotype-health = { path = "../phenotype-health" }
phenotype-health-cli = { path = "../phenotype-health-cli" }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# Error handling
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
