[package]
name = "phenotype-health-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for unified project health scanning"

[[bin]]
name = "phenotype-health"
path = "src/main.rs"

[dependencies]
# Core phenotype libraries
phenotype-health = { path = "../phenotype-health", features = ["http"] }
phenotype-project-registry = { path = "../phenotype-project-registry" }
phenotype-compliance-scanner = { path = "../phenotype-compliance-scanner" }
phenotype-security-aggregator = { path = "../phenotype-security-aggregator", features = ["real-sources"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Config
toml = "0.8"
config = "0.14"

# File watching
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# Misc
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
handlebars = "4.5"

# Terminal colors
console = "0.15"

[dev-dependencies]
tempfile = "3"
