[package]
name = "phenotype-project-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Project discovery and metadata registry for Phenotype"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true
walkdir = "2"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
