[package]
name = "phenotype-security-aggregator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Security finding aggregation for Phenotype projects"

[features]
default = []
real-sources = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true
async-trait.workspace = true
anyhow = "1.0"
# Canonical Severity enum — shared with phenotype-compliance-scanner
# (the two enums were byte-identical and have been merged).
phenotype-compliance-scanner = { path = "../phenotype-compliance-scanner" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
