[package]
name = "phenotype-sentry-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Sentry error tracking configuration for the Phenotype ecosystem"
repository = "https://github.com/KooshaPari/PhenoObservability"

[lib]
path = "src/lib.rs"

[dependencies]
sentry.workspace = true
