[package]
name = "phenotype-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
json = ["tracing-subscriber/json"]